# Eidos

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  blaxel.toml  pyproject.toml  verify_server.py
samples/: heap_overflow.c  logic_bug.cpp  race.go  unsafe_ptr.rs  vectorization_fail.cpp
src/: judge.py  server.py
src/engines/: clang_engine.py  go_engine.py  rust_engine.py
src/utils/: security.py
